--- a/package.json
+++ b/package.json
@@ -11,11 +11,12 @@
   },
   "dependencies": {
     "@astrojs/react": "^2.1.0",
+    "@astrojs/tailwind": "^3.1.1",
     "@astrojs/ts-plugin": "^0.4.4",
     "@nanostores/react": "^0.4.1",
     "@types/react": "^18.0.31",
     "@types/react-dom": "^18.0.11",
-    "astro": "^2.1.7",
+    "astro": "^2.1.8",
     "nanostores": "^0.7.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
